<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidLintUselessParent -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <RelativeLayout
            android:background="@drawable/pd_detail_header"
            android:layout_width="fill_parent"
            android:layout_height="96dip"
            android:padding="8dp">
        <ImageView
                android:id="@+id/pd_profile_picture"
                android:background="@drawable/image_border"
                android:src="@drawable/user"
                android:padding="5dp"
                android:layout_height="80dp"
                android:layout_width="80dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@null"/>
        <TextView
                android:id="@+id/pd_user_fullname"
                android:text="@string/dev_placeholder_user_fullname"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignTop="@id/pd_profile_picture"
                android:layout_toRightOf="@id/pd_profile_picture"
                style="@style/marquee_scrolling"/>
        <TextView
                android:id="@+id/pd_user_program"
                android:text="@string/dev_placeholder_user_program"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="@color/text_dark"
                android:layout_alignLeft="@id/pd_user_fullname"
                android:layout_below="@id/pd_user_fullname"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/marquee_scrolling"/>
        <TextView
                android:id="@+id/pd_post_time"
                android:text="@string/dev_placeholder_post_posttime"
                android:textSize="12sp"
                android:textColor="@color/text_dark"
                android:layout_alignBottom="@id/pd_profile_picture"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:id="@+id/pd_post_content"
                android:text="@string/dev_placeholder_post_content"
                android:textSize="18dp"
                android:padding="16dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </ScrollView>
</LinearLayout>