<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <RelativeLayout
            android:background="@drawable/pd_detail_header"
            android:layout_width="fill_parent"
            android:layout_height="96dip"
            android:padding="8dp">
        <ImageView
                android:id="@+id/up_profile_picture"
                android:background="@drawable/image_border"
                android:src="@drawable/user"
                android:padding="5dp"
                android:layout_height="80dp"
                android:layout_width="80dp"
                android:contentDescription="@null"
                android:layout_marginRight="8dp"/>
        <TextView
                android:id="@+id/up_user_fullname"
                android:text="@string/dev_placeholder_user_fullname"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignTop="@id/up_profile_picture"
                android:layout_toRightOf="@id/up_profile_picture"
                style="@style/marquee_scrolling"/>
        <TextView
                android:id="@+id/up_user_program"
                android:text="@string/dev_placeholder_user_program"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="@color/text_dark"
                android:layout_alignLeft="@id/up_user_fullname"
                android:layout_below="@id/up_user_fullname"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/marquee_scrolling"/>
    </RelativeLayout>
    <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
    <TextView
            android:id="@android:id/empty"
            android:text="@string/list_no_items"
            android:textColor="#f00"
            android:gravity="center_horizontal"
            android:padding="8dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
</LinearLayout>